--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,11 +5,23 @@
 
 @layer components {
   .btn{
-    @apply border border-segundo text-segundo bg-[#D9D9D9] px-4 py-2 rounded-lg font-medium items-center justify-center
+    @apply border border-segundo text-segundo bg-[#D9D9D9] px-4 py-2 rounded-lg font-medium items-center justify-center;
   }
 
   .btn-text{
     @apply text-black bg-transparent;
   }
-
+  .logo-ticker-image{
+    @apply h-8 w-auto;
+  }
+  .tag {
+    @apply text-black text-sm inline-flex border border-cuarto/10 px-3 py-1 rounded-lg tracking-tight
+  }
+  .section-title{
+    @apply text-center md:text-left text-3xl md:text-[54px] md:leading-[60px] font-bold tracking-tighter
+  }
+  .section-text{
+    @apply text-center md:text-left text-[22px] leading-[30px] tracking-tight text-cuarto
+  }
+ 
 }
